<resources>
    <string name="app_name">BuCo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="new_receipt_label">New Receipt</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add receipt</string>
    <string name="category_prompt">Choose a category</string>
    <string name="shop_hint">Shop</string>
    <string name="value_hint">Value</string>
    <string name="comment_hint">Comment</string>
</resources>