<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".NewReceipt">


    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="688dp"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        android:gravity="top"
        android:clickable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="24dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/value"
            android:layout_width="326dp"
            android:layout_height="46dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/value_hint"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shop"
            android:layout_width="326dp"
            android:layout_height="47dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/shop_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/category"
            android:layout_width="326dp"
            android:layout_height="44dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:prompt="@string/category_prompt"
            app:layout_constraintBottom_toTopOf="@+id/comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="326dp"
            android:layout_height="44dp"
            android:layout_marginBottom="220dp"
            android:ems="10"
            android:hint="@string/comment_hint"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/button_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>